build: JPMS descriptors for the eight code modules (item 1.6) (#20)
## Context

**ROADMAP item 1.6** — per-module `module-info.java` (JPMS), with
`d4np-test`'s `--add-opens`
requirement documented (ADR-001, spec §1.1, FR-25).

## Eight descriptors, not nine

`d4np-bom` is `packaging=pom` with no sources, so a descriptor there is
**impossible**, not merely
unnecessary. The new lint asserts it has none, so "nine" cannot be
restored by someone counting modules.

| Artifact | Module | Internal `requires` |
|---|---|---|
| `d4np-core` | `it.d4np.utils` | — |
| `d4np-jdbc` | `it.d4np.utils.jdbc` | `it.d4np.utils` |
| `d4np-concurrent` | `it.d4np.utils.concurrent` | `it.d4np.utils` |
| `d4np-security` | `it.d4np.utils.security` | `it.d4np.utils` |
| `d4np-json` | `it.d4np.utils.json` | `it.d4np.utils` |
| `d4np-spring-adapter` | `it.d4np.utils.spring` | `it.d4np.utils`,
`it.d4np.utils.json` |
| `d4np-lock-redisson` | `it.d4np.utils.lock.redisson` |
`it.d4np.utils.concurrent` |
| `d4np-test` | `it.d4np.utils.test` | `it.d4np.utils` |

That is spec §3's graph. `d4np-lock-redisson` pointing at `concurrent`
rather than core is deliberate
in the spec, not an omission here.

## A naming conflict I escalated instead of guessing

Two records in this repo disagreed about the single most consequential
name:

| Record | Says |
|---|---|
| `orchestrator/project.yaml` (your dated correction) | modules land at
**`it.d4np.utils.core`**, `.jdbc`, `.security` — commons-lang3
convention |
| `AGENTS.md` §5 + the ADR-0003 note + generated README hint | core's
sources at `it/d4np/utils/`; *"read that value as core's package root"*;
`import it.d4np.utils.*` |

A JPMS module name appears in *consumers'* own descriptors, so a wrong
pick is the breaking change
japicmp (NFR-09) exists to catch. You chose **`it.d4np.utils`** for
core; the manifest note is
corrected so the records no longer contradict each other.

**The accepted cost, stated plainly:** core now owns the family root, so
no other modul